连接前后台 travel routine
