# my-tour-server/swagger/swagger.json
@@ -738,6 +738,26 @@
                 }
             }
         },
+        "/travel_note/get_travel_routines": {
+            "get": {
+                "tags": [
+                    "travel_note"
+                ],
+                "description": "get travel all routines by user id",
+                "operationId": "TravelNoteController.GetTravelRoutines",
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.TravelRoutine"
+                        }
+                    },
+                    "403": {
+                        "description": "travel routine is empty"
+                    }
+                }
+            }
+        },
         "/travel_note/publishTravelNote": {
             "post": {
                 "tags": [
@@ -1223,6 +1243,10 @@
                     "format": "int64"
                 }
             }
+        },
+        "models.TravelRoutine": {
+            "title": "TravelRoutine",
+            "type": "object"
         },
         "models.User": {
             "title": "User",
